added colors and fonts, improved layout

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="logo">
                     Logo
                 </div>
-                <ul class="nav-links">
+                <ul class="nav-links heroSecondary">
                     <li>header link one</li>
                     <li>header link two</li>
                     <li>header link three</li>
@@ -22,11 +22,11 @@
             </nav>
 
             <div class="article">
-                <div class="two">
+                <div class="two blue">
                     <div class="two-left">
                         <h1 class="heroText">This website is awesome</h1>
-                        <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
-                        <button>Sign up</button>
+                        <p class="heroSecondary">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
+                        <button class="sign-up1">Sign up</button>
                     </div>
 
                     <div class="two-right">
@@ -62,8 +62,10 @@
                 </div>
 
                 <div class="four">
-                    <p class="quote">This is an ispiring quote, or a testimonial form a customer. Mybe it's just filling up space, or maybe people will actualy read it. Who knows? All i know is that it looks nice.</p>
+                    <p class="quote">This is an ispiring quote, or a testimonial form a customer. Maybe it's just filling up space, or maybe people will actualy read it. Who knows? All i know is that it looks nice.</p>
+                    <div class="sig-div">
                     <p class="signature">-Thor, God of Thunder</p>
+                    </div>
                 </div>
 
                 <div class="five">
@@ -72,11 +74,11 @@
                     <p>Sign up for our product by clicking that button right over there!</p>
                     </div>
             
-                    <button class="sign-up">Sign up</button>
+                    <button class="sign-up2">Sign up</button>
                 </div>
             </div>
 
-            <footer class="six">
+            <footer class="six heroSecondary">
                 <p>Jan Žiljak 2022</p>
             </footer>
 
